Added-more-articles-and-finished-questions-MVP-submission

--- a/index.html
+++ b/index.html
@@ -213,6 +213,35 @@
       </div>
     </div>
 
+    <div class="card" data-tab="javascript">
+      <div class="headline">Javascript is a pain in my butt!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By BONES R. LIFE</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="node">
+      <div class="headline">Help me I'm trapped inside here!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/sir.jpg" />
+        </div>
+        <span>By SIR RUFF'N'STUFF</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="bootstrap">
+      <div class="headline">Can't wait to learn some more bootstrap!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
   </div>
 </body>
 
